# gen-brand-photo-pictrue

./: .gitignore  Cargo.toml  README.md  index.css  index.html  index.js  package.json  sw.js  sw.reg.mgr.js
pkg/: README.md  gen_brand_photo_pictrue.d.ts  gen_brand_photo_pictrue.js  gen_brand_photo_pictrue_bg.wasm  gen_brand_photo_pictrue_bg.wasm.d.ts  package.json
src/: lib.rs  main.rs
